--- a/microservices/python_services/warranty_claim_orchestrator/Dockerfile
+++ b/microservices/python_services/warranty_claim_orchestrator/Dockerfile
@@ -3,5 +3,5 @@ WORKDIR /usr/src/app
 COPY ./app/ /usr/src/app/
 COPY ./requirements.txt /usr/src/app/
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["python", "./WarrantyValidation.py"]
+CMD ["python", "./WarrantyClaimOrchestrator.py"]
 EXPOSE 5000
