--- a/SpringBoot/pom.xml
+++ b/SpringBoot/pom.xml
@@ -74,6 +74,16 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- RabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
+
         <!-- beautify data -->
         <dependency>
 			<groupId>org.projectlombok</groupId>
