Now working version 1

--- a/microservices/python_services/email_service/Dockerfile
+++ b/microservices/python_services/email_service/Dockerfile
@@ -10,6 +10,7 @@ COPY ./requirements.txt ./
 # Install any needed dependencies specified in requirements.txt
 RUN python -m pip install --no-cache-dir -r requirements.txt
 
+COPY ./amqp_setup.py ./amqp_setup.py
 COPY ./email_service.py ./amqp_connection.py ./
 
 
