--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -150,6 +150,14 @@ services:
       shipping_queue_name: Shipping
       PYTHONUNBUFFERED: 1
 
+  source-replacement-orchestrator:
+    build:
+      context: ./microservices/python_services/source_replacement_orchestrator
+      dockerfile: Dockerfile
+    ports:
+      - "5005:5000"
+    restart: always
+
   # frontend
   ui:
     build:
