--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -167,15 +167,82 @@ services:
       - "3000:5000"
     restart: always
 
+#   # kong
+#   kong-database:
+#     image: postgres:15 # tested 20231101; Ref: https://docs.konghq.com/gateway/latest/support/third-party/
+#     platform: linux/amd64  # <- required for Mac M1 chip. Otherwise, can remove
+#     restart: always
+#     environment:
+#       POSTGRES_DB: kong
+#       POSTGRES_USER: kong
+#       POSTGRES_PASSWORD: password
+#     ports:
+#       - "5432:5432"
+#     healthcheck:
+#       test: ["CMD", "pg_isready", "-U", "kong"]
+#       interval: 10s
+#       timeout: 5s
+#       retries: 5
+#     # volumes:
+#       # - pgdata:/var/lib/postgresql/data
+
+#   #######################################
+#   # Kong database migration
+#   #######################################
+#   kong-migration:
+#     image: kong/kong-gateway:3.2.2.5 # tested 20231101
+#     platform: linux/amd64  # <- required for Mac M1 chip. Otherwise, can remove
+#     command: "kong migrations bootstrap"
+#     restart: on-failure
+#     environment:
+#       KONG_DATABASE: postgres
+#       KONG_PG_HOST: kong-database
+#       KONG_PG_USER: kong
+#       KONG_PG_PASSWORD: password
+#     depends_on:
+#       - kong-database
+
+#   #######################################
+#   # Kong: The API Gateway
+#   #######################################
+#   kong:
+#     image: kong/kong-gateway:3.2.2.5 # tested 20231101
+#     platform: linux/amd64  # <- required for Mac M1 chip. Otherwise, can remove
+#     restart: always
+#     environment:
+#       KONG_DATABASE: postgres
+#       KONG_PG_HOST: kong-database
+#       KONG_PG_USER: kong
+#       KONG_PG_PASSWORD: password
+#       KONG_PROXY_ACCESS_LOG: /dev/stdout
+#       KONG_ADMIN_ACCESS_LOG: /dev/stdout
+#       KONG_PROXY_ERROR_LOG: /dev/stderr
+#       KONG_ADMIN_ERROR_LOG: /dev/stderr
+#       KONG_ADMIN_LISTEN: 0.0.0.0:8001
+#       KONG_ADMIN_GUI_URL: localhost:8002
+#     depends_on:
+#       - kong-migration
+#     ports: # https://docs.konghq.com/gateway/latest/production/networking/default-ports/
+#       - "9000:8000" # Takes incoming HTTP traffic from Consumers, and forwards it to upstream Services.
+#       - "9443:8443" # Takes incoming HTTPS traffic from Consumers, and forwards it to upstream Services.
+#       - "8001:8001" # Admin API. Listens for calls from the command line over HTTP.
+#       - "9444:8444" # Admin API. Listens for calls from the command line over HTTPS.
+#       - "9002:8002" # Kong Manager (GUI). Listens for HTTP traffic.
+#       - "9445:8445" # Kong Manager (GUI). Listens for HTTPS traffic.
+#       - "9003:8003" # Dev Portal. Listens for HTTP traffic, assuming Dev Portal is enabled.
+#       - "9446:8446" # Dev Portal. Listens for HTTP traffic, assuming Dev Portal is enabled.
+#       - "9005:8004" # Dev Portal /files traffic over HTTPS, assuming the Dev Portal is enabled.
+#       - "9447:8447" # Dev Portal /files traffic over HTTPS, assuming the Dev Portal is enabled.
+
   
   
 
   
       
       
-#       # - db-data:/var/lib/mysql
-#       # - rabbitmq_data:/var/lib/rabbitmq
+# #       # - db-data:/var/lib/mysql
+# #       # - rabbitmq_data:/var/lib/rabbitmq
   
 
-# # volumes:
-# #   my_mysql_volume:
+# # # volumes:
+# # #   my_mysql_volume:
